sonar warnings resolved