@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class LeaderboardService {
@@ -28,7 +27,7 @@ public class LeaderboardService {
         List<ArenaLeaderboard> top100 = leaderboardRepository.findTop100();
         return top100.stream()
                 .map(entity -> toDto(entity, currentWarriorId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -54,7 +53,7 @@ public class LeaderboardService {
         List<ArenaLeaderboard> around = leaderboardRepository.findWarriorsAroundRank(startRank, endRank);
         return around.stream()
                 .map(entity -> toDto(entity, warriorId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
